# lgr-agent

./: .gitignore  Dockerfile  Dockerfile_OLD  Dockerfile_humble_beta  Dockerfile_humbletest  Dockerfile_humbletest2  Dockerfile_jazzy  Dockerfile_test  EDITBOTCAMERA.md  HOWTORUN.md  HOWTORUNPROJECT.md  LOG.md  README.md  buildPackages.sh  buildScout.sh  buildServices.sh  cyclonedds.xml  install_deps_agilex.sh  launchScoutNAV2.sh  launchScoutSimulation.sh  launchwafflegz.sh  package.xml  remembr_server.py  runCaptionerNode.sh  runGraphBuilderManager.sh  runMemoryBuilding.sh  runODNode.sh  runcamerafeed.sh  runteleop.sh  runwafflegz.sh  runzedcamerafeed.sh  start.sh
EVALUATION PATCH FOR NAVQA/: download_split.py  preprocess_coda_all.sh
VILA CONFIGS/: Dockerfile  HOWTORUNVILASERVER.md  environment_setup.sh  launchVILAcontainer.sh
WORKSPACE/src/memory_builder/src/: memory_builder.py
backup/src/waffle_agent/: package.xml  setup.py
captionerserver/: Dockerfile  Dockerfile_x86  builder_download.py  captioner_server.py  curiosityagent-jazzy.code-workspace  startserver.sh  startserver_jetson.sh
flashattn/: HOWTOBUILDFLASHATTN.md  installflashattn.sh
graph_test/: graphtest.py  requirements.txt
milvusserver/: start_MILVUS.sh
old_src/: slam_toolbox.yaml
old_src/agilex_scout/agilex_scout_description/: CMakeLists.txt
old_src/agilex_scout/agilex_scout_nav2/: package.xml
old_src/agilex_scout/agilex_scout_nav2/config/: no_replanning.xml  slam_toolbox.yaml
old_src/simulation_pkgs/gazebo_worlds/agri/: open_field_world.sdf
old_src/simulation_pkgs/simulation/: package.xml
old_src/simulation_pkgs/simulation/rviz/: scout_sim.rviz
old_src/waffle_agent/: pyproject.toml
old_src/waffle_agent/waffle_agent/: common_utils.py  graphmemory_manager.py  memory_builder_node.py
old_src/waffle_agent/waffle_agent/tools/: waffle.py
remembr/remembr/agents/: remembr_agent.py
src/agilex_scout/agilex_scout_nav2/config/: slam_toolbox.yaml
src/agilex_scout/agilex_scout_nav2/launch/: navigation.launch.py
src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/log/: latest_build
src/simulation_pkgs/gazebo_worlds/agri/: open_field_world.sdf
src/simulation_pkgs/simulation/: CMakeLists.txt
src/simulation_pkgs/simulation/config/: ros2_gz_bridge_config.yaml
src/simulation_pkgs/simulation/launch/: scout_sim.launch.py  scout_sim.launch_default.py
src/waffle_agent/: CMakeLists.txt  ROS2_MIGRATION.md  json_memory_populator.py  package.xml  setup.cfg  setup.py
src/waffle_agent/launch/: agent.launch.py
src/waffle_agent/resource/: waffle_agent
src/waffle_agent/scripts/: captioner_node.py  waffle_agent.py
src/waffle_agent/scripts/tools/: waffle.py
src/waffle_agent/waffle_agent/: captioner_node.py  captioner_node_old.py  coda_player.py  coda_player_old.py  evaluator_node.py  evaluator_node_old.py  evaluator_node_old2.py  graph_builder_node.py  graphmemory_manager.py  graphmemory_manager_backup.py  json_memory_populator.py  memory_builder_node.py  memory_builder_node_backup.py  objectd_node.py  objectdetection_node.py  prompts.py  waffle_agent.py
src/waffle_agent/waffle_agent/tools/: waffle.py
src/waffle_agent_msgs/: CMakeLists.txt  package.xml
src/waffle_agent_msgs/srv/: SearchByLabel.srv  SearchByTime.srv
unused/: buildServices.sh  install_deps_agilex.sh
unused/VILA CONFIGS/flashattn/: buildflashattn_giventorch_rtx5070_latest.sh
unused/VILA CONFIGS/flashattn/old build scripts/: buildflashattn_giventorch.sh
unused/old_miscellaneous/: LOG.md  gz2launch.sh  gz2launch_v2.sh
unused/old_src/humble_working_src_/simulation_pkgs/gazebo_worlds/: package.xml
unused/old_src/humble_working_src_/waffle_agent/: __init__.py
utility/evaluation_scripts_patch/: form_question_jsons.py  runfulleval.sh
utility/navqa-captions-processed/captions/0/: captions_Florence2-base-ft_2_secs.json  captions_Florence2-base_2_secs.json  captions_Florence2-large-ft_2_secs.json  captions_Florence2-large_2_secs.json  captions_Florence2-large_2_secs_onlyDlabels.json  captions_Florence2-large_3_secs copy.json
utility/navqa-captions-processed/captions/16/: captions_Florence2-base-ft_2_secs.json  captions_Florence2-base_2_secs.json  captions_Florence2-large-ft_2_secs.json  captions_Florence2-large_2_secs.json
utility/navqa-captions-processed/captions/21/: captions_Florence2-base-ft_2_secs.json  captions_Florence2-base_2_secs.json  captions_Florence2-large-ft_2_secs.json  captions_Florence2-large_2_secs.json
utility/navqa-captions-processed/captions/3/: captions_Florence2-base-ft_2_secs.json  (+3 more)
utility/old_src/waffle_agent_msgs/: CMakeLists.txt
(+220 files in other folders)
