<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waffle_agent</name>
  <version>0.0.1</version>
  <description>LLM Agent for Waffle Robot</description>
  <maintainer email="paolo13.riva@mail.polimi.it">User</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  
  <exec_depend>python3-rich</exec_depend>
  <exec_depend>python3-dotenv</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <!-- Added runtime dependencies required by captioner and memory builder -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <!-- Note: `nano_llm` is typically a pip package; add to pyproject/requirements if needed -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>