<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

	<name>agilex_scout_nav2</name>
	<version>0.0.1</version>
	<description>TODO</description>

	<maintainer email="todo@todo.todo">AIRLab - Artificial Intelligence and Robotics Laboratory, Politecnico di Milano</maintainer>
	<license>Apache License 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>nav2</depend>
	<depend>nav2_bringup</depend>

	<exec_depend>nav2_msgs</exec_depend>
	<exec_depend>action_msgs</exec_depend>
	<exec_depend>lifecycle_msgs</exec_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
	
</package>