<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

	<name>gazebo_worlds</name>
	<version>0.0.1</version>
	<description>Gazebo worlds.</description>
	
	<maintainer email="todo@todo.todo">AIRLab - Artificial Intelligence and Robotics Laboratory, Politecnico di Milano</maintainer>
	<license>Apache License 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>gazebo_ros</depend>
	<exec_depend>gazebo</exec_depend>
	<exec_depend>gazebo_plugins</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
		<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
	</export>

</package>